Testing initial scale on the phone

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=2">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -74,7 +74,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Wungjae 'Jason' Lee</h1>
+                <h1>Wungjae Jason Lee</h1>
                 <hr>
                 <p>Northwestern undergraduate student majoring in computer science and applied mathematics</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
