--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=2">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -46,20 +46,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">wungjae jason lee</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#aboutme">About me</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#ongoingproject">Ongoing Project</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -77,29 +77,29 @@
                 <h1>Wungjae Jason Lee</h1>
                 <hr>
                 <p>Northwestern undergraduate student majoring in computer science and applied mathematics</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <a href="#aboutme" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
     </header>
 
-    <section class="bg-primary" id="about">
+    <section class="bg-primary" id="aboutme">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Learn more about me!</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                    <p class="text-faded">Hi, I'm Wung Jae Lee! People call me Wung, Jason, Jae, and I'm used to all of them. I'm an undergraduate student at Northwestern University majoring in Applied Mathematics and Computer Science. Brifely about my wide-ranging interests! I love playing soccer, running, and working out. I love singing, rapping, playing clarinet, and listening to new music and artists. I really enjoy learning about new things, new ideas, and new people. Most importantly!, programming really excites me, and I hope to work on many more interesting projects. </p>
+                    <a href="#portfolio" class="btn btn-default btn-xl page-scroll">Let's Get Started!</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services">
+    <section id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">Portfolio</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -109,36 +109,38 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <h3>Work</h3>
+                        <p class="text-muted">Work experiences, skillsets </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <a href="file:///C:/Users/%EB%8C%80%ED%91%9C/Documents/GitHub/wungjaelee.github.io/completedproject.html">
+                            <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                            <h3>Projects</h3>
+                            <p class="text-muted">Learn more about the projects I completed!</p>
+                        </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <h3>Honors</h3>
+                        <p class="text-muted">List of honors and scholarships</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <h3>Coursework</h3>
+                        <p class="text-muted">Courses completed in Northwestern!</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="no-padding" id="portfolio">
+    <section class="no-padding" id="ongoingproject">
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
@@ -150,7 +152,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    SweatFitness
                                 </div>
                             </div>
                         </div>
@@ -165,7 +167,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    LOLHelper
                                 </div>
                             </div>
                         </div>
@@ -180,7 +182,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Snake
                                 </div>
                             </div>
                         </div>
@@ -195,7 +197,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    AccountReader
                                 </div>
                             </div>
                         </div>
@@ -210,7 +212,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    WebtoonScraper
                                 </div>
                             </div>
                         </div>
@@ -225,7 +227,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Asteroids
                                 </div>
                             </div>
                         </div>
@@ -238,8 +240,7 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+                <h2>Learn more about them by clicking on the images!</h2>
             </div>
         </div>
     </aside>
@@ -250,15 +251,15 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Please call me or email me if you need anything or just to get to know me!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>123-456-6789</p>
+                    <p>224-714-9788</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">wunglee2019@u.northwestern.edu</a></p>
                 </div>
             </div>
         </div>
